--- a/ladsquiz/src/app/dashboard/dashboard.component.html
+++ b/ladsquiz/src/app/dashboard/dashboard.component.html
@@ -1,42 +1,4 @@
-<div class="dashboard-intro" *ngIf="!quizStarted">
+<div class="dashboard-intro">
     <p class="dashboard-title">L.A.D.S. Quiz</p>
-    <a [routerLink]="" (click)="quizStarted = !quizStarted" class="btn start-btn">Start Quiz</a>
-</div>
-
-<div *ngIf="quizStarted">
-    <p class="round-select">Select a Round</p>
-    <div class="round-panel">
-        <div id="questionPanel" class="round-column">
-            <p class="round-column-label">Questions</p>
-            <a (click)="goToQuestion(round.id)" routerLinkActive="active" class="round-btn hvr-sweep-to-right" *ngFor="let round of rounds">
-                <div class="round-btn-1">
-                    {{round.id}}
-                </div>
-                <div class="round-btn-2">
-                    <span><b>Round {{round.id}}</b></span>
-                    <span>{{round.caption}}</span>
-                </div>
-                <div class="round-btn-3">
-                    <span>{{round.questionCount}}qus</span>
-                    <span>{{round.pointsAvailable}}pts</span>
-                </div>
-            </a>
-        </div>
-        <div id="answerPanel" class="round-column">
-            <p class="round-column-label">Answers</p>
-            <a routerLink="/answers" routerLinkActive="active" class="round-btn hvr-sweep-to-left" *ngFor="let round of rounds">
-                <div class="round-btn-1">
-                    <span>{{round.id}}</span>
-                </div>
-                <div class="round-btn-2">
-                    <span><b>Round {{round.id}}</b></span>
-                    <span>{{round.caption}}</span>
-                </div>
-                <div class="round-btn-3">
-                    <span>{{round.questionCount}}qus</span>
-                    <span>{{round.pointsAvailable}}pts</span>
-                </div>
-            </a>
-        </div>
-    </div>
+    <a routerLink="/roundselection" class="btn start-btn">Start Quiz</a>
 </div>
