--- a/ladsquiz/src/app/round-selection/round-selection.component.scss
+++ b/ladsquiz/src/app/round-selection/round-selection.component.scss
@@ -58,3 +58,14 @@
         }
     }
 }
+
+.log-in-form {
+    text-align: center;
+    color: white;
+    margin-top: 20%;
+
+    input {
+        margin-right: 2%;
+        border-radius: 20px;
+    }
+}
